--- a/src/main/resources/application.properties.sample
+++ b/src/main/resources/application.properties.sample
@@ -10,3 +10,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 
 jwt.secret.key=dGhyZWV0aHJlZXRocmVldGhyZWV0aHJlZXRocmVldGhyZWU=
+
+admin.token=AAABnvxRVklrnYxKZ0aHgTBcXukeZygoCasewfsdf
