--- a/src/main/resources/application.properties.sample
+++ b/src/main/resources/application.properties.sample
@@ -21,3 +21,6 @@ cloud.aws.stack.auto-=false
 cloud.aws.s3.credentials.accessKey={accessKey}
 cloud.aws.s3.credentials.secretKey={secretKey}
 cloud.aws.s3.bucket={bucket-name}
+
+# default image path
+defaultImage.path=https://webtoon-test.s3.ap-northeast-2.amazonaws.com/default.jpg
